[project]
name = "simple-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black[jupyter]>=25.1.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.5",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "tqdm[jupyter]>=4.67.1",
]
